--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 A LoveApp made as an entry in Valentine's LoveApp contest by Programming Club, IIT Kanpur.
+
+View it here: http://gopiramena.x10.mx/loveapp/
